<resources>
    <string name="app_name" translatable="false">ZOO Seeker</string>
    <string name="close">Close</string>
    <string name="show_on_map">Show on map</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="ranking">Ranking</string>
    <string name="places">Places</string>
    <string name="logout">Logout</string>
    <string name="position">Position</string>
    <string name="points">Points</string>
    <string name="place">Place</string>
    <string name="read_more">To find out more, click on the box</string>
    <string name="register_succes">Registered successfully</string>
    <string name="register_failure">Registration failed</string>
    <string name="error_conncection_db">No connection to the server</string>
    <string name="wrong_password">Wrong password or username</string>
    <string name="wait">Please wait</string>
    <string name="register_fill">Please fill both fields</string>
    <string name="register_user_in_db">The username exists in the database</string>
    <string name="rektorat">Rectorate UE</string>
    <string name="cnti">Centre for Modern Information Technology</string>
    <string name="visited_succes">Visited</string>
    <string name="visited_already">Already visited</string>
    <string name="visit_place_to_see">Visit place to read description</string>
    <string name="login_window">Login window</string>
    <string name="register_window">Register window</string>
    <string name="cniba">Scientific Information Centre and Academic Library </string>
    <string name="dworzec">Train station</string>
    <string name="planeta">Planeta kotleta</string>
    <string name="rynek">Town square</string>
    <string name="a">Building A</string>
    <string name="b">Building B</string>
    <string name="e">Building E</string>
    <string name="f">Building F</string>
    <string name="n">Building N</string>
    <string name="time" translatable="false">Time</string>
</resources>
