<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#113972">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:layout_below="@+id/test"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/Place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"

            android:text="@string/place"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/User_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/user_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="0.4"
            android:text="@string/points"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>


