<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameAr1Main">

    <fragment
        android:id="@+id/arFragment"
        android:name="com.example.ApplicationForVistingplaces.GameAr1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/bananasCntTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:text="Bananas Left: 20" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="serif-monospace"
        android:text="0:0"
        android:textSize="32sp"
        android:textStyle="bold" />

    <View
        android:layout_width="72dp"
        android:layout_height="4dp"
        android:layout_centerInParent="true"
        android:background="#7a000000" />

    <View
        android:layout_width="4dp"
        android:layout_height="72dp"
        android:layout_centerInParent="true"
        android:background="#7a000000" />

    <Button
        android:id="@+id/shootButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="Shoot" />

    <RelativeLayout
        android:id="@+id/results"
        android:layout_width="300dp"
        android:layout_height="423dp"
        android:layout_centerInParent="true"
        android:background="#4CAF50"
        android:visibility="gone">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/section1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Result"
                android:textAlignment="center" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/section2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/section1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/time"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Time_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="time"
                android:textSize="24sp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/section3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/section2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/points"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/points_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="Points"
                android:textSize="24sp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/close" />

    </RelativeLayout>

</RelativeLayout>